src/objects/CustomObject5__c.object
<CustomObject>
    <fields>
        <fullName>CataractExamination__c</fullName>
        <label>本月白内障检查量（人）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客户</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>customer6FzM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>欧堡月检查量（人）停用</label>
        <precision>18</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FundusExamination__c</fullName>
        <label>本月眼底检查量（人）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutpatientVolume__c</fullName>
        <label>本月门诊检查量（人）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PhysicalExamination__c</fullName>
        <label>本月体检检查量（人）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RefractiveIndex__c</fullName>
        <label>本月屈光检查量（人）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>equipment__c</fullName>
        <label>设备序列号</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipName>vDG6</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>欧堡检查量</label>
    <nameField>
        <label>统计年月（示例：201601）</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>欧堡检查量</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>